--- a/public/css/styles.less
+++ b/public/css/styles.less
@@ -4,6 +4,12 @@
 @import "lib/bootstrap-social";
 @import "themes/modern";
 
+// Our Custom Mixins:
+@import "themes/bootcanvas-mixins";
+
+// Our Theme: Bootcanvas
+@import "themes/bootcanvas";
+
 // Scaffolding
 // -------------------------
 
